# roc_schedule_watcher

./: .dockerignore  .gitignore  Dockerfile  README.md  run.py  setup.cfg
src/: offlinestatpageparser.py  playerlogsaver.py  urlgenerator.py  watcher.py  watchlistvalidator.py
src/model/: offlinestatspage.py
src/pageparser/: offlinestatpageparser.py
tests/: test_offlinestatpageparser.py  test_watchlistfilevalidator.py
tests/pageparser/: test_offlinestatpageparser.py
tests/pageparser/testpages/: offlineofficers.html
tests/testpages/: no_alliance.html  no_command_chain.html  online.html
watchlogs/: 1.csv
