[metadata]
name = roc-schedule-watcher
version = 0.0.1
description = Collects stats over time for a list of users
# url = https://github.com/matthewnbrown/roc-toolkit
author = Matt Brown
author_email = gitmattb@gmail.com
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    sympy
    pillow
    numpy
    requests
    2captcha-python
    beautifulsoup4
    opencv-python
    bs4
    lxml
    browser-cookie3 >= 0.16.1

[options.entry_points]
console_scripts =
    roc-toolkit-cli = rocalert.__main__:main

[options.packages.find]
exclude =
    captcha_img

