[metadata]
name = roc-schedule-watcher
version = 0.0.2
description = Collects stats over time for a list of users
url = https://github.com/matthewnbrown/roc_schedule_watcher
author = Matt Brown
author_email = gitmattb@gmail.com
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    option
    beautifulsoup4
    bs4
    lxml
    aiohttp
    asyncclick
    anyio
    mock

